--- a/index.html
+++ b/index.html
@@ -56,11 +56,9 @@
           <li class="nav-item">
             <a class="nav-link" href="#programme-formation">Formations</a>  
           </li>
-          <!--
           <li class="nav-item">
             <a class="nav-link" href="#feedback-section">Témoignages</a>
           </li>
-          -->
           <li class="nav-item btn-contact-us pl-4 pl-lg-0">
             <button class="btn btn-info" data-toggle="modal" data-target="#contactModal">Contactez-nous</button>
           </li>
@@ -226,117 +224,62 @@
           </div>
         </div>
       </section>     
-      <!--
       <section class="customer-feedback" id="feedback-section">
         <div class="row">
           <div class="col-12 text-center pb-5">
-            <h2>What our customers have to say</h2>
-            <h6 class="section-subtitle text-muted m-0">Lorem ipsum dolor sit amet, tincidunt vestibulum.</h6>
+            <h2>Ce que nos participants racontent
+            
+            </h2>
+            <h6 class="section-subtitle text-muted m-0">Quelle aventure d'apprentissage vivrez-vous avec CT Forming ?
+               
+              </h6>
           </div>
           <div class="owl-carousel owl-theme grid-margin">
               <div class="card customer-cards">
                 <div class="card-body">
                   <div class="text-center">
-                    <img src="images/face2.jpg" width="89" height="89" alt="" class="img-customer">
-                    <p class="m-0 py-3 text-muted">Lorem ipsum dolor sit amet, tincidunt vestibulum. Fusce egeabus consectetuer turpis, suspendisse.</p>
+                    <img src="images/Bilstein_Arnaud_Penot.jpg" width="89" height="89" alt="" class="img-customer">
+                    <p class="m-0 py-3 text-muted">Une manière nouvelle d’aborder la formation à travers le partage des problématiques et enjeux de notre entreprise pour construire le Plan opérationnel qui nous correspond.
+                      Cathy intègre les grands principes du marketing actuel (digitalisation, orientation clients, KPI’s…) tout en faisant un lien avec la réalité nos équipes dans la construction d’un plan Marketing.
+                      En bonus, tous les outils d’aujourd’hui pour mieux accompagner notre transformation marketing orientée Clients !
+                      Merci Cathy ! </p>
                     <div class="content-divider m-auto"></div>
-                    <h6 class="card-title pt-3">Tony Martinez</h6>
-                    <h6 class="customer-designation text-muted m-0">Marketing Manager</h6>
+                    <h6 class="card-title pt-3">Arnaud PENOT<br><a class="nav-item nav-link" href="https://doxaformation.com/" target="_blank">(via l'OF DOXA Formation)</a></h6>
+                    <h6 class="customer-designation text-muted m-0">Responsable Marketing - Ferdinand Bilstein France</h6>
                   </div>
                 </div>
               </div>
               <div class="card customer-cards">
                 <div class="card-body">
                   <div class="text-center">
-                    <img src="images/face3.jpg" width="89" height="89" alt="" class="img-customer">
-                    <p class="m-0 py-3 text-muted">Lorem ipsum dolor sit amet, tincidunt vestibulum. Fusce egeabus consectetuer turpis, suspendisse.</p>
+                    <img src="images/FabConseils_Fabienne_Le_Bars.jpg" width="89" height="89" alt="" class="img-customer">
+                    <p class="m-0 py-3 text-muted">Cathy, "Miss LinkedIn"
+                      Vous recherchez à progresser dans l’utilisation de LinkedIn , je vous recommande tout particulièrement Cathy !!
+                      Très pédagogue, elle saura vous guider dans l’appropriation de l’outil et vous aidera à développer votre visibilité professionnelle .
+                      Du partage et de la bonne humeur rythment la formation, un vrai talent
+                      </p>
                     <div class="content-divider m-auto"></div>
-                    <h6 class="card-title pt-3">Sophia Armstrong</h6>
-                    <h6 class="customer-designation text-muted m-0">Marketing Manager</h6>
+                    <h6 class="card-title pt-3">Lise Domingues</h6>
+                    <h6 class="customer-designation text-muted m-0">Formation et conseils, experte Retail</h6>
                   </div>
                 </div>
               </div>
               <div class="card customer-cards">
                 <div class="card-body">
                   <div class="text-center">
-                    <img src="images/face20.jpg" width="89" height="89" alt="" class="img-customer">
-                    <p class="m-0 py-3 text-muted">Lorem ipsum dolor sit amet, tincidunt vestibulum. Fusce egeabus consectetuer turpis, suspendisse.</p>
+                    <img src="images/LD_Formation_Lise_Domingues.jpg" width="89" height="89" alt="" class="img-customer">
+                    <p class="m-0 py-3 text-muted">Dans un premier temps, j’ai suivi un atelier de CT forming sur les outils digitaux pour animer des formations à distance. Cathy a une vision très large des outils open source existants sur le marché et sait nous donner envie de les utiliser !
+                      Dans un second temps, Cathy TOUIN m’a accompagné en « formation-action » sur l’utilisation de Linkedin. Formation très opérationnelle et adapté à mes besoins. De beaux moments partagés et de l’efficacité. Encore merci pour ces découvertes !
+                      </p>
                     <div class="content-divider m-auto"></div>
-                    <h6 class="card-title pt-3">Cody Lambert</h6>
-                    <h6 class="customer-designation text-muted m-0">Marketing Manager</h6>
-                  </div>
-                </div>
-              </div>
-              <div class="card customer-cards">
-                <div class="card-body">
-                  <div class="text-center">
-                    <img src="images/face15.jpg" width="89" height="89" alt="" class="img-customer">
-                    <p class="m-0 py-3 text-muted">Lorem ipsum dolor sit amet, tincidunt vestibulum. Fusce egeabus consectetuer turpis, suspendisse.</p>
-                    <div class="content-divider m-auto"></div>
-                    <h6 class="card-title pt-3">Cody Lambert</h6>
-                    <h6 class="customer-designation text-muted m-0">Marketing Manager</h6>
-                  </div>
-                </div>
-              </div>
-              <div class="card customer-cards">
-                <div class="card-body">
-                  <div class="text-center">
-                    <img src="images/face16.jpg" width="89" height="89" alt="" class="img-customer">
-                    <p class="m-0 py-3 text-muted">Lorem ipsum dolor sit amet, tincidunt vestibulum. Fusce egeabus consectetuer turpis, suspendisse.</p>
-                    <div class="content-divider m-auto"></div>
-                    <h6 class="card-title pt-3">Cody Lambert</h6>
-                    <h6 class="customer-designation text-muted m-0">Marketing Manager</h6>
-                  </div>
-                </div>
-              </div>
-              <div class="card customer-cards">
-                <div class="card-body">
-                  <div class="text-center">
-                    <img src="images/face1.jpg" width="89" height="89" alt="" class="img-customer">
-                    <p class="m-0 py-3 text-muted">Lorem ipsum dolor sit amet, tincidunt vestibulum. Fusce egeabus consectetuer turpis, suspendisse.</p>
-                    <div class="content-divider m-auto"></div>
-                    <h6 class="card-title pt-3">Tony Martinez</h6>
-                    <h6 class="customer-designation text-muted m-0">Marketing Manager</h6>
-                  </div>
-                </div>
-              </div>
-              <div class="card customer-cards">
-                <div class="card-body">
-                  <div class="text-center">
-                    <img src="images/face2.jpg" width="89" height="89" alt="" class="img-customer">
-                    <p class="m-0 py-3 text-muted">Lorem ipsum dolor sit amet, tincidunt vestibulum. Fusce egeabus consectetuer turpis, suspendisse.</p>
-                    <div class="content-divider m-auto"></div>
-                    <h6 class="card-title pt-3">Tony Martinez</h6>
-                    <h6 class="customer-designation text-muted m-0">Marketing Manager</h6>
-                  </div>
-                </div>
-              </div>
-              <div class="card customer-cards">
-                <div class="card-body">
-                  <div class="text-center">
-                    <img src="images/face3.jpg" width="89" height="89" alt="" class="img-customer">
-                    <p class="m-0 py-3 text-muted">Lorem ipsum dolor sit amet, tincidunt vestibulum. Fusce egeabus consectetuer turpis, suspendisse.</p>
-                    <div class="content-divider m-auto"></div>
-                    <h6 class="card-title pt-3">Sophia Armstrong</h6>
-                    <h6 class="customer-designation text-muted m-0">Marketing Manager</h6>
-                  </div>
-                </div>
-              </div>
-              <div class="card customer-cards">
-                <div class="card-body">
-                  <div class="text-center">
-                    <img src="images/face20.jpg" width="89" height="89" alt="" class="img-customer">
-                    <p class="m-0 py-3 text-muted">Lorem ipsum dolor sit amet, tincidunt vestibulum. Fusce egeabus consectetuer turpis, suspendisse.</p>
-                    <div class="content-divider m-auto"></div>
-                    <h6 class="card-title pt-3">Cody Lambert</h6>
-                    <h6 class="customer-designation text-muted m-0">Marketing Manager</h6>
+                    <h6 class="card-title pt-3">Fabienne Le Bars</h6>
+                    <h6 class="customer-designation text-muted m-0">Consultante - Formatrice - Coach</h6>
                   </div>
                 </div>
               </div>
           </div>
         </div>
       </section>
-      -->
       <section class="contact-us" id="contact-section">
         <div class="contact-us-bgimage grid-margin" >
           <div class="pb-4">
