add brand color

--- a/index.html
+++ b/index.html
@@ -244,8 +244,9 @@
                       En bonus, tous les outils d’aujourd’hui pour mieux accompagner notre transformation marketing orientée Clients !
                       Merci Cathy ! </p>
                     <div class="content-divider m-auto"></div>
-                    <h6 class="card-title pt-3">Arnaud PENOT<br><a class="nav-item nav-link" href="https://doxaformation.com/" target="_blank">(via l'OF DOXA Formation)</a></h6>
+                    <h6 class="card-title pt-3">Arnaud PENOT</h6>
                     <h6 class="customer-designation text-muted m-0">Responsable Marketing - Ferdinand Bilstein France</h6>
+                    <h6 class="card-title pt-3"><a href="https://doxaformation.com/" target="_blank">avec <img src="images/doxa.png" height="30" alt="" class="img-logo"></a></h6>
                   </div>
                 </div>
               </div>
