--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <div class="features-width">
               <img src="images/Group7.svg" alt="" class="img-icons">
               <h5 class="py-3">Outils<br>collaboratifs</h5>
-              <p class="text-muted">Pour construire votre savoir et capitaliser sur vos expériences transférables.</p>
+              <p class="text-muted">Pour construire votre savoir et capitaliser sur vos expériences transférables auprès de votre équipe ou au sein de votre entreprise</p>
             </div>
           </div>
           <div class="grid-margin d-flex justify-content-end">
@@ -143,7 +143,7 @@
                   <div class="card-desc-box d-flex align-items-center justify-content-around">
                     <div>
                       <h6 class="text-white pb-2 px-3">Optimisez votre profil LinkedIn </h6>
-                      <a target="_blank" href="./doc/Programme Mise en forme Profil Linkedin_CTForming_0121.pdf" download="Programme Mise en forme Profil Linkedin_CTForming_0121.pdf">
+                      <a target="_blank" href="./doc/Programme_Mise_en_forme_Profil_Linkedin_CTForming_0121_Sur_demande.pdf" download="Programme Mise en forme Profil Linkedin_CTForming_0121_Sur demande.pdf">
                         <button class="btn btn-white">Téléchargez<br>le programme</button>
                       </a>
                     </div>
@@ -166,7 +166,7 @@
                   <div class="card-desc-box d-flex align-items-center justify-content-around">
                     <div>
                       <h6 class="text-white pb-2 px-3">Construisez votre communication digitale sur LinkedIn</h6>
-                      <a target="_blank" href="./doc/Programme_Développez votre stratégie de communication digitale sur LinkedIn_CTForming_0121.pdf" download="HProgramme_Développez votre stratégie de communication digitale sur LinkedIn_CTForming_0121.pdf">
+                      <a target="_blank" href="./doc/Programme_Développez_votre_stratégie_de_communication_digitale_sur_LinkedIn_CTForming_0121_Sur_demande.pdf" download="HProgramme_Développez votre stratégie de communication digitale sur LinkedIn_CTForming_0121_Sur demande.pdf">
                         <button class="btn btn-white">Téléchargez<br>le programme</button>
                       </a>
                     </div>
@@ -189,7 +189,7 @@
                   <div class="card-desc-box d-flex align-items-center justify-content-around">
                     <div>
                       <h6 class="text-white pb-2 px-3">Comment mieux vendre avec les réseaux sociaux ?</h6>
-                      <a target="_blank" href="./doc/Programme Social Selling_CTForming_0121.pdf" download="Programme Social Selling_CTForming_0121.pdf">
+                      <a target="_blank" href="./doc/Programme_Social_Selling_CTForming_0121_Sur_demande.pdf" download="Programme Social Selling_CTForming_0121_Sur demande.pdf">
                         <button class="btn btn-white">Téléchargez<br>le programme</button>
                       </a>
                     </div>
@@ -212,6 +212,9 @@
                   <div class="card-desc-box d-flex align-items-center justify-content-around">
                     <div>
                       <h6 class="text-white pb-2 px-3">LinkedIn, outil de recherche d'emploi</h6>
+                      <a target="_blank" href="./doc/Programme_Linkedin_outil_de_recherche_Emploi_CTForming_0121_Sur_demande.pdf" download="outil de recherche Emploi_CTForming_0121_Sur demande.pdf">
+                        <button class="btn btn-white">Téléchargez<br>le programme</button>
+                      </a>
                     </div>
                   </div>
                 </div>   
@@ -240,7 +243,7 @@
                   <div class="text-center">
                     <img src="images/Bilstein_Arnaud_Penot.jpg" width="89" height="89" alt="" class="img-customer">
                     <p class="m-0 py-3 text-muted">Une manière nouvelle d’aborder la formation à travers le partage des problématiques et enjeux de notre entreprise pour construire le Plan opérationnel qui nous correspond.
-                      Cathy intègre les grands principes du marketing actuel (digitalisation, orientation clients, KPI’s…) tout en faisant un lien avec la réalité nos équipes dans la construction d’un plan Marketing.
+                      Cathy intègre les grands principes du marketing actuel (digitalisation, orientation clients, KPI’s…) en faisant un lien avec la réalité de nos équipes.
                       En bonus, tous les outils d’aujourd’hui pour mieux accompagner notre transformation marketing orientée Clients !
                       Merci Cathy ! </p>
                     <div class="content-divider m-auto"></div>
@@ -255,13 +258,13 @@
                   <div class="text-center">
                     <img src="images/LD_Formation_Lise_Domingues.jpg" width="89" height="89" alt="" class="img-customer">
                     <p class="m-0 py-3 text-muted">Cathy, "Miss LinkedIn"
-                      Vous recherchez à progresser dans l’utilisation de LinkedIn , je vous recommande tout particulièrement Cathy !!
+                      Vous recherchez à progresser dans l’utilisation de LinkedIn, je vous recommande tout particulièrement Cathy !!
                       Très pédagogue, elle saura vous guider dans l’appropriation de l’outil et vous aidera à développer votre visibilité professionnelle .
                       Du partage et de la bonne humeur rythment la formation, un vrai talent
                       </p>
                     <div class="content-divider m-auto"></div>
                     <h6 class="card-title pt-3">Lise Domingues</h6>
-                    <h6 class="customer-designation text-muted m-0">Formation et conseils, experte Retail</h6>
+                    <h6 class="customer-designation text-muted m-0">Consultante et formatrice, experte Retail</h6>
                   </div>
                 </div>
               </div>
