--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+<html xmlns:og="http://ogp.me/ns#">  
 <head>
   <title>CT Forming, LinkedIn & Inbound Marketing</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+  <meta property="og:title" content="CT Forming, LinkedIn & Inbound Marketing" />
+  <meta property="og:type" content="article" />
+  <meta property="og:url" content="https://ctforming.fr/" />
+  <meta property="og:image" content="images/open-graph-image.png" />
+  <meta property="og:site_name" content="CT Forming, LinkedIn & Inbound Marketing" />
+  <meta property="og:locale" content="fr_FR" />
+
+
   <link rel="stylesheet" href="vendors/owl-carousel/css/owl.carousel.min.css">
   <link rel="stylesheet" href="vendors/owl-carousel/css/owl.theme.default.css">
   <link rel="stylesheet" href="vendors/mdi/css/materialdesignicons.min.css">
