--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<html xmlns:og="http://ogp.me/ns#">  
+<html prefix="og: http://ogp.me/ns#">
 <head>
   <title>CT Forming, LinkedIn & Inbound Marketing</title>
   <meta charset="UTF-8">
