--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta property="og:description" content="Investir sur les réseaux sociaux devient un objectif incontournable pour les entreprises en 2021. En B2B, c'est LinkedIn qui se trouve en haut du podium.
   Pour vous accompagner dans votre démarche de social selling, CT Forming vous propose 3 formations dédiées à l’entreprise pour mettre en place la stratégie de communication digitale via LinkedIn, construire une action de social selling, optimiser son profil via un personal branding adapté. Linkedin est aussi un outil pour sa recherche d’emploi, de stage ou d’alternance." />
   <meta property="og:url" content="https://ctforming.fr/" />
-  <meta property="og:image" content="images/open-graph-image.png" />
+  <meta property="og:image" content="https://ctforming.fr/images/open-graph-image.png" />
   <meta property="og:site_name" content="CT Forming, LinkedIn & Inbound Marketing" />
   <meta property="og:locale" content="fr_FR" />
 
