--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <meta property="og:title" content="CT Forming, LinkedIn & Inbound Marketing" />
   <meta property="og:type" content="article" />
-  <meta property="og:description" content="Investir sur les réseaux sociaux devient un objectif incontournable pour les entreprises en 2021. En B2B, c'est LinkedIn qui se trouve en haut du podium.
+  <meta property="og:description" content="Investir sur les réseaux sociaux devient un objectif incontournable pour les entreprises. En B2B, c'est LinkedIn qui se trouve en haut du podium.
   Pour vous accompagner dans votre démarche de social selling, CT Forming vous propose 3 formations dédiées à l’entreprise pour mettre en place la stratégie de communication digitale via LinkedIn, construire une action de social selling, optimiser son profil via un personal branding adapté. Linkedin est aussi un outil pour sa recherche d’emploi, de stage ou d’alternance." />
   <meta property="og:url" content="https://ctforming.fr/" />
   <meta property="og:image" content="https://ctforming.fr/images/open-graph-image.png" />
@@ -142,7 +142,7 @@
       <section class="case-studies" id="programme-formation">
         <div class="row grid-margin">
           <div class="col-12 text-center pb-5">
-            <h2>Les formations 2021</h2>
+            <h2>Les formations</h2>
             <h6 class="section-subtitle text-muted">Vous souhaitez développer votre visibilité numérique ou trouver de nouveaux clients ? <br> Ces programmes vous permettront de prendre en main votre développement digital </h6>
           </div>
           <div class="col-12 col-md-6 col-lg-3 stretch-card mb-3 mb-lg-0" data-aos="zoom-in">
